tests/snapshots/test_parser__parser@err_open_block.txt.snap
---
source: tests/test_parser.rs
expression: "&ast"
input_file: tests/parser-inputs/err_open_block.txt

---
Err(
    Error {
        kind: SyntaxError,
        detail: Some(
            "unexpected identifier, expected end of block",
        ),
        name: Some(
            "err_open_block.txt",
        ),
        lineno: 1,
    },
)
