tests/snapshots/test_parser__parser@extends.txt.snap
---
source: tests/test_parser.rs
expression: "&ast"
input_file: tests/parser-inputs/extends.txt

---
Ok(
    Template {
        children: [
            Extends {
                name: Const {
                    value: "layout.html",
                } @ 1:11-1:24,
            } @ 1:3-1:27,
            EmitRaw {
                raw: "\n",
            } @ 1:27-2:0,
            Block {
                name: "title",
                body: [
                    EmitRaw {
                        raw: "new title",
                    } @ 2:17-2:26,
                ],
            } @ 2:3-2:40,
            EmitRaw {
                raw: "\n",
            } @ 2:40-3:0,
            Block {
                name: "body",
                body: [
                    EmitRaw {
                        raw: "new body",
                    } @ 3:16-3:24,
                ],
            } @ 3:3-3:38,
            EmitRaw {
                raw: "\n",
            } @ 3:38-4:0,
        ],
    } @ 1:0-4:0,
)
