tests/snapshots/test_parser__parser@getitem.txt.snap
---
source: tests/test_parser.rs
expression: "&ast"
input_file: tests/parser-inputs/getitem.txt

---
Ok(
    Template {
        children: [
            EmitExpr {
                expr: GetItem {
                    expr: GetItem {
                        expr: Var {
                            id: "foo",
                        } @ 1:3-1:6,
                        subscript_expr: Const {
                            value: "bar",
                        } @ 1:7-1:12,
                    } @ 1:6-1:14,
                    subscript_expr: Const {
                        value: 42,
                    } @ 1:14-1:16,
                } @ 1:13-1:20,
            } @ 1:0-1:20,
            EmitRaw {
                raw: "\n",
            } @ 1:20-2:0,
        ],
    } @ 1:0-2:0,
)
