tests/snapshots/test_parser__parser@if_cond_simple.txt.snap
---
source: tests/test_parser.rs
expression: "&ast"
input_file: tests/parser-inputs/if_cond_simple.txt

---
Ok(
    Template {
        children: [
            IfCond {
                expr: Var {
                    id: "expr1",
                } @ 1:6-1:11,
                true_body: [
                    EmitRaw {
                        raw: "\n    branch 1\n",
                    } @ 1:14-3:0,
                ],
                false_body: [],
            } @ 1:3-3:11,
            EmitRaw {
                raw: "\n",
            } @ 3:11-4:0,
        ],
    } @ 1:0-4:0,
)
